--- a/src/scss/src/_st.scss
+++ b/src/scss/src/_st.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "IndieFlower";
-    src: url('/res/fonts/IndieFlower-Regular.ttf');
+    src: url('../fonts/IndieFlower-Regular.ttf');
 }
 html, body, p, h1, h2, h3, h4, h5, h6 {margin: 0; padding: 0; scroll-behavior: smooth;}
 html {box-sizing: border-box; height:100%;}
